# ogl_playground

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: texture_f.glsl  white_f.glsl
include/core/: app.hpp  time.hpp  window.hpp
include/gfx/: buf_elem.hpp  command.hpp  format.hpp  handle.hpp  image.hpp  index_buf.hpp  ogl_ctx.hpp  render2d.hpp  shader.hpp  shader_data_type.hpp  tex2d.hpp  vert_array.hpp  vert_buf.hpp
src/: main.cpp
src/core/: app.cpp  time.cpp  window.cpp
src/gfx/: buf_elem.cpp  command.cpp  image.cpp  index_buf.cpp  ogl_ctx.cpp  render2d.cpp  shader.cpp  tex2d.cpp  vert_array.cpp  vert_buf.cpp
